--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,8 +6,8 @@
 html{
  background-image: linear-gradient(to bottom right, rgb(255, 103, 204), rgb(31, 196, 127));
  background-repeat: no-repeat;
+ width: 100%;
  min-height: 100%;
- min-width: 1024px;
 }
 body {
   text-align: center;
@@ -73,7 +73,7 @@ button:hover{
     border-left-color: white;
 }
 .tab{
-    width: 1400px;
+    max-width: 1400px;
     padding: 15px 30px;
     padding-top: 0;
     margin: 30px;
@@ -123,23 +123,33 @@ a:hover {
   text-decoration:underline;
 }
 @media only screen and (max-width: 900px) {
-    body{
-        width: 100%;
-        height: 100%;
+    html{
+   background-size: 100%;
+   margin: 0;
+   padding: 0;
     }
     .layout{
-        display: flex;
         flex-direction: column;
     }
     .buttons{
         display: flex;
         flex-direction: column;
     }
-    .tab{
-        max-width: 100%
+    p{
+        width: 100%;
+        align-items: flex-start;
+        margin: 0;
+        padding: 0;
     }
     img{
-        max-width: 100%;
-
+        padding: 0;
     }
+    .tab{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        border: none;
+        transform: none;
+        transition: none;
+}
 }
